--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
       <div id="drawingCanvas">
       </div>
-    <script src="js/hf_script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
